# connman-resolvconf

./: Cargo.toml  README.adoc
.github/workflows/: ci.yml
contrib/openrc/: connman-resolvconf.confd  connman-resolvconf.initd
contrib/systemd/: connman-resolvconf.service
src/: connman.rs  main.rs  resolvconf.rs  utils.rs
