[package]
name = "connman-resolvconf"
version = "0.1.0"
authors = ["Jakub Jirutka <jakub@jirutka.cz>"]
edition = "2021"
description = "ConnMan integration with resolvconf(8)"
repository = "https://github.com/jirutka/connman-resolvconf"
license = "MIT"
keywords = ["connman", "resolvconf", "openresolv"]

[dependencies]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
