[package]
name = "connman-resolvconf"
version = "0.2.0"
authors = ["Jakub Jirutka <jakub@jirutka.cz>"]
edition = "2021"
description = "ConnMan integration with resolvconf(8)"
repository = "https://github.com/jirutka/connman-resolvconf"
license = "MIT"
keywords = ["connman", "resolvconf", "openresolv"]

[[bin]]
name = "connman-resolvconfd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
dbus = "0.9.5"
env_logger = { version = "0.9.0", default-features = false, features = ["humantime"] }
log = "0.4.16"
nix = { version = "0.24", default-features = false, features = ["fs", "user"] }
signal-hook = { version = "0.3", default-features = false }
syslog = "6.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
